Second try on Java 11 without sun.tools.javac.util